// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component should be disabled, checked and with value 1`] = `
<DocumentFragment>
  <label
    class="b-radio radio"
    disabled=""
  >
    <input
      checked=""
      disabled=""
      name="test"
      type="radio"
      value="TEST"
    />
    <span
      class="check"
    />
    <span
      class="control-label"
    >
      <p>
        Default
      </p>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Radio component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <label
    class="b-radio radio other-class this-is-a-test"
  >
    <input
      name="test"
      type="radio"
      value=""
    />
    <span
      class="check"
    />
    <span
      class="control-label"
    >
      <p>
        Default
      </p>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Radio component should render 1`] = `
<DocumentFragment>
  <label
    class="b-radio radio"
  >
    <input
      name="test"
      type="radio"
      value=""
    />
    <span
      class="check"
    />
    <span
      class="control-label"
    >
      Test 
      <a>
        Give me
      </a>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Radio component should use inline styles 1`] = `
<DocumentFragment>
  <label
    class="b-radio radio"
    style="height: 250px;"
  >
    <input
      name="test"
      type="radio"
      value=""
    />
    <span
      class="check"
    />
    <span
      class="control-label"
    >
      <p>
        Default
      </p>
    </span>
  </label>
</DocumentFragment>
`;
